# placement

day 10/: Untitled.ipynb
day 12/: Untitled.ipynb
day 13/: app.py
day 13/templates/: base.html  index.html
day 15/: app.py
day 15/templates/: abc.txt  about.html  base.html  foot_c.html  index.html  nav_c.html
day 16/: app.py  app1.py
day 16/templates/: base.html  dym.html  index.html  pa.html
day 17/: app.py
day 17/templates/: 404.html  base.html  index.html
day 18/: .gitignore  main.py
day 3/: Untitled.ipynb  python.py
day 3/.ipynb_checkpoints/: python-checkpoint.py
day 3/Block/: index.html
day 3/Inline/: index.html
day 5/: Untitled.ipynb  a.py
day 5/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
day 6/: Untitled.ipynb  details.py  main.py
day 6/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
day 6/my_custom_package/: help.py  power.py  simple_math.py
day 7/: Readme.md  ascii.py  main.py  pyproject.toml
day 7/module/: remove_html_chars.py
day 7/remove_html_chars_nikhil.egg-info/: PKG-INFO  SOURCES.txt
day 8/: file_hand.py  filecheck.py  hello.txt  index.html
day 9/: index.html  sel.py  style.css
