[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remove-html-chars-nikhil"
version = "0.1.0"
description = "A simple Python utility to remove HTML special characters from strings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

authors = [
  { name = "Nikhil Kumar Singh", email = "kumarnikhil0180@gmail.com" }
]

keywords = ["html", "string", "cleaner", "utility", "text-processing"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/nikhilsoftwareboy"
Source = "https://github.com/nikhilsoftwareboy/remove-html-chars"
Issues = "https://github.com/nikhilsoftwareboy/remove-html-chars/issues"
